# esp32-component-badge-bsp

./: CMakeLists.txt  Kconfig  LICENSE  badge_bsp.h  idf_component.yml
.github/workflows/: upload_component.yml
bsp/: audio.h  battery.h  device.h  display.h  event.h  i2c.h  input.h  led.h  mch2022.h  power.h  rtc.h  tanmatsu.h  why2025.h  wrapper.h
bsp/wrapped/: bsp_errr.h
common/: badge_bsp_device.c  badge_bsp_input_hooks.c  badge_bsp_input_hooks.h  bsp_event.c  wrapper.c
stub/: badge_bsp.c  badge_bsp_audio.c  badge_bsp_battery.c  badge_bsp_device.c  badge_bsp_display.c  badge_bsp_i2c.c  badge_bsp_input.c  badge_bsp_led.c  badge_bsp_leds.c  badge_bsp_power.c  badge_bsp_rtc.c
targets/bornhack-2024-pov/: badge_bsp_i2c.c  badge_bsp_input.c  badge_bsp_led.c  bh24_hardware.h
targets/bornhack-2025-circle/: badge_bsp_device.c  badge_bsp_display.c  badge_bsp_led.c  circle_hardware.h
targets/esp32-p4-function-ev-board/: badge_bsp_device.c  badge_bsp_display.c  badge_bsp_i2c.c  badge_bsp_input.c  p4_function_ev_hardware.h
targets/esp32-p4-function-ev-board-lt8912b/: badge_bsp_device.c  badge_bsp_display.c  badge_bsp_i2c.c  devkit_hardware.h
targets/hackerhotel-2024/: badge_bsp_device.c  badge_bsp_display.c  badge_bsp_input.c  badge_bsp_led.c
targets/heltecv3/: badge_bsp_display.c  badge_bsp_i2c.c  badge_bsp_input.c  heltecv3_hardware.h
targets/kami/: badge_bsp_device.c  badge_bsp_display.c  badge_bsp_i2c.c  badge_bsp_input.c  badge_bsp_led.c  kami_hardware.h
targets/mch2022/: badge_bsp_audio.c  badge_bsp_battery.c  badge_bsp_device.c  badge_bsp_display.c  badge_bsp_i2c.c  badge_bsp_input.c  mch2022_hardware.h  target.cmake
targets/p4-devkit/: badge_bsp_device.c  hardware.h
targets/tanmatsu/: badge_bsp.c  badge_bsp_audio.c  badge_bsp_battery.c  badge_bsp_device.c  badge_bsp_display.c  badge_bsp_i2c.c  badge_bsp_input.c  badge_bsp_led.c  badge_bsp_power.c  badge_bsp_rtc.c  tanmatsu_hardware.h
targets/why2025/: badge_bsp_battery.c  badge_bsp_device.c  badge_bsp_display.c  badge_bsp_i2c.c  badge_bsp_input.c  badge_bsp_power.c  badge_bsp_rtc.c  coprocessor.c  coprocessor.h  display.c  hardware.h  target.cmake  why2025_hardware.h  why2025_lcd_init_cmds.h
